force-app/main/default/objects/MUSW__Object_Field_Icon_Setting__mdt/MUSW__Object_Field_Icon_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Object Field Icon Setting</label>
    <pluralLabel>Object Field Icon Settings</pluralLabel>
</CustomObject>