force-app/main/default/objects/MUSW__Object_Field_Icon_Setting__mdt/fields/MUSW__Object_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Object_Field_API_Name__c</fullName>
    <inlineHelpText>Enter the API Name of a field on the Object that returns a boolean value (True/False), such as a Boolean data type or Formula field.</inlineHelpText>
    <label>Object Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>