force-app/main/default/objects/MUSW__Object_Field_Icon_Setting__mdt/fields/MUSW__Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Order__c</fullName>
    <inlineHelpText>Enter the display order for this configuration. Lower values will position the object field icon settings closer to the start. Higher values will position them further away.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>