force-app/main/default/objects/MUSW__Object_Field_Icon_Setting__mdt/fields/MUSW__True_Case_Icon_Reference__c.field-meta.xml
<CustomField>
    <fullName>MUSW__True_Case_Icon_Reference__c</fullName>
    <inlineHelpText>Enter the reference for the icon from the standard Salesforce icon set that should be displayed when the field&apos;s value is True (e.g. action:approval).</inlineHelpText>
    <label>True Case Icon Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>